# zaechka-bot

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  bot.py  pyproject.toml  random_good_replies.txt  requirements.txt  requirements.txt.txt  trigger_replies.txt  trigger_words.txt
zbott/: start_bot.bat
zbott/Source/: main_core.py  zaechka_bot.py
